--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -105,3 +105,12 @@ div.container
 								div.v-progress-bar
 	div.row
 		a.button.button-reserve Reserve
+
+include modals/welcome
+
+script(src='/socket.io/socket.io.js')
+script(src='/vendor/jquery.min.js')
+script(src='/vendor/bootstrap-modal.js')
+script(src='/vendor/bootstrap-transition.js')
+script(src='/js/dashboard.js')
+script(src='/js/utils/globals.js')
