Add reservation confirmation modal

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -283,6 +283,11 @@ Override some Bootstrap defaults
 	line-height 34px
 	letter-spacing 1px
 
+.button-group > a
+	margin-left 20px
+.button-group > a:first-child
+	margin 0
+
 /*  --------------------------------------------------
     :: Misc
     -------------------------------------------------- */
