--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -108,8 +108,10 @@ div.container
 
 a#btn-welcome.btn Welcome
 a#btn-timeout.btn Timeout
+a#btn-reservation-confirm.btn Confirm
 include modals/welcome
 include modals/timeout
+include modals/reservation-confirm
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
