--- a/app/server/views/modals/timeout.jade
+++ b/app/server/views/modals/timeout.jade
@@ -5,4 +5,4 @@
 		h3 You’re about to time out of your session. Are you still there, 
 			span.username John Doe?
 	.modal-body 
-		a.button.button-modal.loud Continue
+		a.button.button-modal.button-continue.loud Continue
