--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -39,4 +39,6 @@
 .button-back{position:relative;height:35px;padding-left:55px;padding-right:10px;margin-top:35px;font-size:22px;line-height:35px}
 .button-back > .icon-back-arrow{position:absolute;top:6px;left:10px}
 .button-modal{min-width:200px;height:33px;font-size:20px;line-height:34px;letter-spacing:1px}
+.button-group > a{margin-left:20px}
+.button-group > a:first-child{margin:0}
 .username{color:#6eb6b5}
