Add reservation confirmation modal

--- a/app/public/css/mixins.styl
+++ b/app/public/css/mixins.styl
@@ -66,3 +66,11 @@ loudButton()
 	background-repeat repeat-x
 	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#A2C32A",endColorstr="#8FB722",GradientType=0)')
 	box-shadow 1px 1px 3px rgba(0, 0, 0, 0.2), -1px -1px 3px rgba(0, 0, 0, 0.2), inset 0 1px #88E700
+
+cautionButton()
+	border 1px solid #555555
+	background-color #BA2377
+	background-image linear-gradient(top, #C12885, #B31F6A)
+	background-repeat repeat-x
+	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#C12885",endColorstr="#B31F6A",GradientType=0)')
+	box-shadow 1px 1px 3px rgba(0, 0, 0, 0.2), -1px -1px 3px rgba(0, 0, 0, 0.2), inset 0 1px #961C5A
