--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -181,7 +181,7 @@ Usage of a sublcass in HTML would look like this:
 .reservation-entries
 	padding-top 18px
 	padding-left 20px
-.reservation-entries > li:last-child
+.reservation-entries > .is-reserve
 	margin-left 20px
 
 /*  --------------------------------------------------
@@ -196,31 +196,40 @@ Override some Bootstrap defaults
 .modal-backdrop, .modal-backdrop.fade.in
 	opacity 0.3
 
+.modal-header
+	position relative
 .modal-header .button-close
 	position absolute
 	top -20px
 	right -20px
+.modal-header .confirmed-check
+	position absolute
+	left 50%
+	margin-left -22px
+	bottom -24px
 
 /* @extends .modal */
 .modal-centered
 	width 600px
 	margin -250px 0 0 -300px
 	text-align center
-
 .modal-centered .modal-header
 	padding 26px 40px 21px
 	color #6B6B6B
 	text-transform uppercase
 	line-height 58px
 	border-bottom 1px solid #D5D4D4
-
 .modal-centered h3
 	font-size 22px
 	font-weight normal
-
 .modal-centered .modal-body
 	font-size 15px
 	padding 25px 40px 25px
+.modal-centered.stretch
+	width 790px
+	margin -250px 0 0 -395px
+.modal-centered .reservation-entries
+	padding-left 14px
 
 /*  --------------------------------------------------
     :: Buttons
@@ -242,8 +251,8 @@ Override some Bootstrap defaults
 .button.quiet, .button.is-disabled
 	quietButton()
 
-// .button.caution
-// 	cautionButton()
+.button.caution
+	cautionButton()
 
 .button-reserve
 	display block
