--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -109,9 +109,11 @@ div.container
 a#btn-welcome.btn Welcome
 a#btn-timeout.btn Timeout
 a#btn-reservation-confirm.btn Confirm
+a#btn-reservation-success.btn Success
 include modals/welcome
 include modals/timeout
 include modals/reservation-confirm
+include modals/reservation-success
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
