--- a/app/server/views/dashboard-2.jade
+++ b/app/server/views/dashboard-2.jade
@@ -57,7 +57,7 @@ div.container
 								div.menu-progress
 									div.v-progress
 										div.v-progress-bar
-						li
+						li.is-reserve
 							a.button.button-reserve.button-reserve-fat.loud Reserve
 			div.reservation
 				div.reservation-header
