--- a/app/server/views/modals/reservation-confirm.jade
+++ b/app/server/views/modals/reservation-confirm.jade
@@ -6,5 +6,5 @@
 			span.username John Doe?
 	.modal-body
 		.button-group
-			a.button.button-modal.quiet No, Go Back
-			a.button.button-modal.loud Yes, Reserve
+			a.button.button-modal.button-no.quiet No, Go Back
+			a.button.button-modal.button-yes.loud Yes, Reserve
