--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -110,10 +110,12 @@ a#btn-welcome.btn Welcome
 a#btn-timeout.btn Timeout
 a#btn-reservation-confirm.btn Confirm
 a#btn-reservation-success.btn Success
+a#btn-service-selection.btn Services
 include modals/welcome
 include modals/timeout
 include modals/reservation-confirm
 include modals/reservation-success
+include modals/service-selection
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
