in process style refactor

--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -39,7 +39,7 @@ Examples of Layout Styles:
 .navbar + .container
 	margin-top 40px
 
-.menu-wrapper
+.services-wrapper
 	margin-top 60px
 
 .reservation-wrapper
