--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -12,95 +12,95 @@ div.navbar.navbar-fixed-top
 					a Log Out
 
 div.container
-	div.menu-wrapper
+	div.services-wrapper
 		div.row
 			ul
 				li
-					div.menu-item.is-selected
+					div.service.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Housing
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-housing-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item
+					div.service
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Meals
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-meals-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item.is-selected
+					div.service.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Health Care
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-health-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item
+					div.service
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Hygiene
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-hygiene-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item
+					div.service
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Employment
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-employment-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item.is-selected
+					div.service.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Transportation
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-transportation-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item
+					div.service
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Mental Health
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-mental-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.menu-item
+					div.service
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
-						div.menu-chrome
-						div.menu-header
+						div.service-chrome
+						div.service-header
 							h2 Financial
-						div.menu-thumbnail
+						div.service-thumbnail
 							img(src='/img/icons/latest/icon-financial-general.png')
-						div.menu-progress
+						div.service-progress
 							div.v-progress
 								div.v-progress-bar
 	div.row
