--- a/app/server/views/modals/reservation-success.jade
+++ b/app/server/views/modals/reservation-success.jade
@@ -8,33 +8,33 @@
 	.modal-body
 		ul.l-horizontal.clearfix.reservation-entries
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 		.button-group
