--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,7 +1,7 @@
 .container,.navbar-fixed-top .container{width:960px}
 .row{margin-left:0}
 .navbar + .container{margin-top:40px}
-.menu-wrapper{margin-top:60px}
+.services-wrapper{margin-top:60px}
 .reservation-wrapper{margin-top:30px}
 .reservation-wrapper:first-child{margin-top:25px}
 .l-horizontal{margin:0;padding:0;list-style-type:none;width:100%}
