--- a/app/server/views/dashboard-2.jade
+++ b/app/server/views/dashboard-2.jade
@@ -28,33 +28,33 @@ div.container
 				div.reservation-body
 					ul.l-horizontal.clearfix.reservation-entries
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li.is-reserve
@@ -70,33 +70,33 @@ div.container
 				div.reservation-body
 					ul.l-horizontal.clearfix.reservation-entries
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
@@ -112,33 +112,33 @@ div.container
 				div.reservation-body
 					ul.l-horizontal.clearfix.reservation-entries
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
-							div.menu-item
-								div.menu-chrome
-								div.menu-header
+							div.service
+								div.service-chrome
+								div.service-header
 									h2 Mental Health
-								div.menu-thumbnail
+								div.service-thumbnail
 									img(src='/img/icons/latest/icon-mental-general.png')
-								div.menu-progress
+								div.service-progress
 									div.v-progress
 										div.v-progress-bar
 						li
