restored confirm.jade and tidied up css around the word "service"

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -188,6 +188,7 @@ label, .subheading
 
 #inventory .service
 	width 100px
+	height 128px
 	margin auto
 	margin-bottom 10px
 	padding 10px 20px 6px 20px
