--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -46,7 +46,7 @@ label,.subheading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1p
 #inventory #all-services .heading{text-align:center}
 #inventory #our-services{margin-left:180px;padding:0 20px 0 20px}
 #inventory #our-services .heading{padding-left:20px}
-#inventory .service{width:100px;margin:auto;margin-bottom:10px;padding:10px 20px 6px 20px;color:#777;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
+#inventory .service{width:100px;height:128px;margin:auto;margin-bottom:10px;padding:10px 20px 6px 20px;color:#777;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
 #inventory .service hr{margin:5px 0 3px 0}
 #inventory .service .icon{width:100%;cursor:pointer}
 #inventory #all-services .service .text{text-align:center}
